[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/cowboy.png" type="Texture" id=2]
[ext_resource path="res://Assets/cowboy_fire.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 55.0235

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite_idle" type="Sprite" parent="."]
position = Vector2( 0.145332, 0.0260277 )
rotation = 1.5708
scale = Vector2( 2.99718, 2.99718 )
texture = ExtResource( 2 )

[node name="Sprite_fire" type="Sprite" parent="."]
visible = false
position = Vector2( 0.145332, 0.0260277 )
rotation = 1.5708
scale = Vector2( 2.99718, 2.99718 )
texture = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 2000, 0 )

[node name="FireSpiteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.01
one_shot = true
